# pyttsx3

./: MAKE87.yml  pyproject.toml
app/: main.py
build_kit/: Dockerfile
