[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "app"
version = "0.0.1"
dependencies = [
    "make87[zenoh,protobuf]>=0.1.0",
    "make87_messages>=0.2.8",
    "numpy",
    # Primary TTS engine (recommended)
    "gtts>=2.3.0",
    "pydub>=0.25.0",
    # Fallback TTS engine (optional)
    "pyttsx3>=2.90",
]
description = "Text-to-Speech service with Zenoh messaging"
readme = "README.md"
requires-python = ">=3.9,<3.13"

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
app = []